name:                hls-warnings-bug
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/AbsoluteNikola/hls-warnings-bug#readme
license:             BSD3
license-file:        LICENSE
author:              Nikolay Rulev
maintainer:          nikolayr2001@gmail.com
copyright:           Nikolay Rulev
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hls-warnings-bug
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options: -Weverything -Wno-safe -Wno-missing-safe-haskell-mode -Wno-implicit-prelude -Wno-missing-export-lists
